--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,23 +3,16 @@ services:
   execution:
     image: ethereum/client-go:v1.10.25
     command:
-      - ${NETWORK}
+      - --mainnet
       - --http
-      - "--http.addr ${LISTEN_ADDRESS}"
-      - "--http.api ${HTTP_APIS}"
+      - "--http.addr 0.0.0.0"
+      - "--http.api net,eth,web3"
       - "--http.vhosts *"
-      - "--datadir ${DATA_DIR}"
-      - "--authrpc.addr ${LISTEN_ADDRESS}"
-      - "--authrpc.port ${AUTH_RPC_PORT}"
+      - "--datadir /var/lib/ethereum/execution"
+      - "--authrpc.addr 0.0.0.0"
+      - "--authrpc.port 8551"
       - "--authrpc.vhosts *"
-      - "--authrpc.jwtsecret ${SHARED_JWT_SECRET}"
-    environment:
-      DATA_DIR: /var/lib/ethereum/execution
-      HTTP_APIS: "net,eth,web3"
-      LISTEN_ADDRESS: "0.0.0.0"
-      NETWORK: "--mainnet"
-      SHARED_JWT_SECRET: /var/lib/ethereum/shared/jwtsecret
-      AUTH_RPC_PORT: "8551"
+      - "--authrpc.jwtsecret /var/lib/ethereum/shared/jwtsecret"
     volumes:
       - type: bind
         source: /var/lib/ethereum/execution
