--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,5 +14,5 @@ services:
       - "--authrpc.vhosts *"
       - "--authrpc.jwtsecret /var/lib/ethereum/shared/jwtsecret"
     volumes:
-      - /var/lib/ethereum/execution:/var/lib/ethereum/execution:rw
-      - /var/lib/ethereum/shared:/var/lib/ethereum/shared:rw
+      - /var/lib/ethereum:/var/lib/ethereum:rw
+      # - /var/lib/ethereum/shared:/var/lib/ethereum/shared:rw
