--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,7 @@
 version: "3.9"
 services:
   execution:
+    container_name: execution.ethereum.local
     image: ethereum/client-go:v1.10.25
     command:
       - --mainnet
@@ -26,6 +27,7 @@ services:
     networks:
       - ethereum
   consensus:
+    container_name: consensus.ethereum.local
     image: sigp/lighthouse:v3.1.2
     command:
       - lighthouse
@@ -36,7 +38,7 @@ services:
       - --datadir
       - "/var/lib/ethereum/consensus"
       - --execution-endpoint
-      - "http://localhost:8551"
+      - "http://execution:8551"
       - --execution-jwt
       - "/var/lib/ethereum/shared/jwtsecret"
       # - --monitoring-endpoint ${LIGHTHOUSE_MONITORING_ENDPOINT}
