--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,6 +41,7 @@ services:
       - "http://execution:8551"
       - --execution-jwt
       - "/var/lib/ethereum/shared/jwtsecret"
+      - --monitoring-endpoint-period 180
       - --monitoring-endpoint
       - https://beaconcha.in/api/v1/client/metrics?apikey=${MONITORING_API_KEY}&machine=${MONITORING_MACHINE}
     volumes:
