--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -73,6 +73,8 @@ services:
       - .env
     volumes:
       - /var/lib/ethereum:/var/lib/ethereum:rw
+    ports:
+      - 9000:9000
     networks:
       - ethereum
 networks:
