--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,8 +24,9 @@ services:
       - "/var/lib/ethereum/shared/jwtsecret"
     volumes:
       - /var/lib/ethereum:/var/lib/ethereum:rw
-    networks:
-      - ethereum
+    network_mode: host
+    # networks:
+    #   - ethereum
   consensus:
     container_name: consensus
     image: sigp/lighthouse:v3.1.2-amd64-modern
@@ -38,7 +39,7 @@ services:
       - --datadir
       - "/var/lib/ethereum/consensus"
       - --execution-endpoint
-      - "http://execution:8551"
+      - "http://localhost:8551"
       - --execution-jwt
       - "/var/lib/ethereum/shared/jwtsecret"
       - --monitoring-endpoint-period
@@ -49,10 +50,11 @@ services:
       - .env
     volumes:
       - /var/lib/ethereum:/var/lib/ethereum:rw
-    ports:
-      - 9000:9000
-    networks:
-      - ethereum
+    network_mode: host
+    # ports:
+    #   - 9000:9000
+    # networks:
+    #   - ethereum
   validator:
     container_name: validator
     image: sigp/lighthouse:v3.1.2-amd64-modern
@@ -66,7 +68,7 @@ services:
       - --datadir
       - "/var/lib/ethereum/consensus"
       - --beacon-nodes
-      - "http://consensus:5052"
+      - "http://localhost:5052"
       - --monitoring-endpoint-period
       - "500"
       - --monitoring-endpoint
@@ -75,8 +77,9 @@ services:
       - .env
     volumes:
       - /var/lib/ethereum:/var/lib/ethereum:rw
-    networks:
-      - ethereum
-networks:
-  ethereum:
-    driver: bridge
+    network_mode: host
+    # networks:
+    #   - ethereum
+    # networks:
+    #   ethereum:
+    #     driver: bridge
