--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,7 @@ services:
       - "*"
       - --authrpc.jwtsecret
       - "/var/lib/ethereum/shared/jwtsecret"
+    restart: always
     volumes:
       - /var/lib/ethereum:/var/lib/ethereum:rw
     network_mode: host
@@ -48,13 +49,10 @@ services:
       - https://beaconcha.in/api/v1/client/metrics?apikey=${MONITORING_API_KEY}&machine=${MONITORING_MACHINE}
     env_file:
       - .env
+    restart: always
     volumes:
       - /var/lib/ethereum:/var/lib/ethereum:rw
     network_mode: host
-    # ports:
-    #   - 9000:9000
-    # networks:
-    #   - ethereum
   validator:
     container_name: validator
     image: sigp/lighthouse:v3.2.1-amd64-modern
@@ -75,11 +73,7 @@ services:
       - https://beaconcha.in/api/v1/client/metrics?apikey=${MONITORING_API_KEY}&machine=${MONITORING_MACHINE}
     env_file:
       - .env
+    restart: always
     volumes:
       - /var/lib/ethereum:/var/lib/ethereum:rw
     network_mode: host
-    # networks:
-    #   - ethereum
-    # networks:
-    #   ethereum:
-    #     driver: bridge
