--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -83,3 +83,16 @@ services:
     volumes:
       - /var/lib/ethereum:/var/lib/ethereum:rw
     network_mode: host
+  mevboost:
+    container_name: mevboost
+    image: flashbots/mev-boost:1.4.0
+    command:
+      - -mainnet
+      - -addr
+      - 0.0.0.0:18550
+      - -relay-check
+      - -relays https://0xac6e77dfe25ecd6110b8e780608cce0dab71fdd5ebea22a16c0205200f2f8e2e3ad3b71d3499c54ad14d6c21b41a37ae@boost-relay.flashbots.net
+    env_file:
+      - .env
+    restart: always
+    network_mode: host
