--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -91,7 +91,8 @@ services:
       - -addr
       - 0.0.0.0:18550
       - -relay-check
-      - -relays https://0xac6e77dfe25ecd6110b8e780608cce0dab71fdd5ebea22a16c0205200f2f8e2e3ad3b71d3499c54ad14d6c21b41a37ae@boost-relay.flashbots.net
+      - -relays
+      - https://0xac6e77dfe25ecd6110b8e780608cce0dab71fdd5ebea22a16c0205200f2f8e2e3ad3b71d3499c54ad14d6c21b41a37ae@boost-relay.flashbots.net
     env_file:
       - .env
     restart: always
