--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,8 @@ services:
       - "*"
       - --datadir
       - "/var/lib/ethereum/execution"
+      - --datadir.ancient
+      - "/var/lib/ethereum_ext/geth/ancient"
       - --authrpc.addr
       - "0.0.0.0"
       - --authrpc.port
@@ -29,7 +31,7 @@ services:
     stop_grace_period: 180s
     volumes:
       - /var/lib/ethereum:/var/lib/ethereum:rw
-      - /var/lib/ethereum/extended_storage/execution:/var/lib/ethereum/execution:rw
+      - /var/lib/ethereum_ext:/var/lib/ethereum_ext:rw
     network_mode: host
     # networks:
     #   - ethereum
